# ImGif

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
core/: App.cpp  App.h  File.cpp  File.h
gifwrap/: SDL_gifwrap.c  SDL_gifwrap.h
imfilebrowser/: imfilebrowser.h
